--- a/doubts/templates/home.html
+++ b/doubts/templates/home.html
@@ -27,7 +27,7 @@
                     <h6 class="card-title h4">{{q.user}}</h6>
                     <h2 class="card-title h4">{{q.question}}</h2>
                     <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque, nulla.</p>
-                    <a class="btn btn-primary" href="#!">Read more →</a>
+                    <a class="btn btn-primary" href="{%url 'detail' q.id%}">Show Details →</a>
                 </div>
             </div>
         
