--- a/doubts/templates/question-detail.html
+++ b/doubts/templates/question-detail.html
@@ -19,8 +19,27 @@
                         <textarea name="answer" id="" cols="30" rows="3"></textarea>
                         <input type="submit" value="Add your Answer here" class="btn-btn-primary">
                     </form>
-                    <a class="btn btn-primary" href="#!">Read more →</a>
+                    
                 </div>
+                <p>
+                    <button class="btn btn-primary form-control" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+                     Answers
+                    </button>
+                  </p>
+                  <div class="collapse" id="collapseExample">
+                    <div class="card card-body">
+                        <ul class="list-group">
+                            {%for ans in question.fetch_answers%}
+                            <li class="list-group-item">
+                                <a href="{%url 'upvote' ans.id%}">upvote <span>{{ans.upvote.all.count}}</span></a>
+                                <h2 class="card-title-h4">{{ans.answer}}</h2>
+                                <div class="small-text-muted">replied on {{ans.posted_date}} by {{ans.user}}</div>
+                                
+                            </li>
+                            {%endfor%}
+                        </ul>
+                    </div>
+                  </div>
             </div>
         </div>
         <div class="col-4"></div>
