--- a/doubts/templates/login.html
+++ b/doubts/templates/login.html
@@ -15,9 +15,9 @@
   crossorigin="anonymous"></script>
 </head>
 
-<body>
+<body class="bg-light">
     <div class="container">
-        <div class="row">
+        <div class="row align-items-center">
             <div class="col-2"></div>
             <div class="col-8">
                 <form action="" method="post">
